--- a/_config.yml
+++ b/_config.yml
@@ -21,15 +21,15 @@ description: >- # this means to ignore newlines until "baseurl:"
   #twitter_username: username
 github_username: MckinleyX
 minimal_mistakes_skin: sunrise
-search: true
+search: false
 
 # Build settings
 markdown: kramdown
 theme: minimal-mistakes-jekyll
 # Outputting
 permalink: /:categories/:title/
-paginate: 5 # amount of posts to show
-paginate_path: /page:num/
+  #paginate: 0 # amount of posts to show
+  #paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 include:
@@ -49,7 +49,7 @@ include:
 
 # Plugins (previously gems:)
 plugins:
-  - jekyll-paginate
+  #- jekyll-paginate
   - jekyll-sitemap
   - jekyll-gist
   - jekyll-feed
@@ -59,7 +59,8 @@ plugins:
 author:
   name   : "Mckinley Xie"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : "Hey! I'm a high school student interested in math,
+    computer science, and Linux."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
@@ -111,12 +112,12 @@ defaults:
       author_profile: true
       share: false
 
-category_archive:
-  type: liquid
-  path: /categories/
-tag_archive:
-  type: liquid
-  path: /tags/
+        #category_archive:
+        #  type: liquid
+        #  path: /categories/
+        #tag_archive:
+        #  type: liquid
+        #  path: /tags/
 collections:
   math:
     output: true
