--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,8 @@ search: false
 
 # Build settings
 markdown: kramdown
-theme: minimal-mistakes-jekyll
+  #theme: minimal-mistakes-jekyll
+remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 # Outputting
 permalink: /:categories/:title/
   #paginate: 0 # amount of posts to show
