--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,7 @@
 title: i can website wheee
 email: mckinleyxie+website@protonmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Hello! This is the personal website of Mckinley Xie, sometimes
-  known as faefeyfa.
+  Hello! This is the personal website of Mckinley Xie.
   #twitter_username: username
 github_username: MckinleyX
 minimal_mistakes_skin: sunrise
