--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,8 @@ markdown: kramdown
 theme: minimal-mistakes-jekyll
 # Outputting
 permalink: /:categories/:title/
-  #paginate: 0 # amount of posts to show
-  #paginate_path: /page:num/
+paginate: 0 # amount of posts to show
+paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 include:
@@ -48,7 +48,7 @@ include:
 
 # Plugins (previously gems:)
 plugins:
-  #- jekyll-paginate
+  - jekyll-paginate
   - jekyll-sitemap
   - jekyll-gist
   - jekyll-feed
