--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,9 @@
 main:
   - title: "Math"
     url: /math/
-  - title: "About"
-    url: /about/
+  - title: "Blog"
+    url: /posts/
   - title: "CV"
     url: /assets/cv.pdf
+  - title: "About"
+    url: /about/
