--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: i can website wheee
+title: Mckinley Xie
+masthead_title: i can website wheee
 email: mckinleyxie+website@protonmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Hello! This is the personal website of Mckinley Xie.
@@ -24,6 +25,7 @@ search: false
 
 # Build settings
 markdown: kramdown
+#markdown: maruku
 theme: minimal-mistakes-jekyll
 # Outputting
 permalink: /:categories/:title/
