--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ author:
       icon: "fab fa-fw fa-github"
       url: "https://github.com/mckinleyx"
     - label: "Email"
-      icon: "far fa-fw fa-envelope"
+      icon: "fas fa-fw fa-envelope"
       url: "mailto:mckinleyxie+website@protonmail.com"
 
 footer:
