--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,8 @@
 main:
   - title: "Math"
     url: /math/
+  - title: "Projects"
+    url: /projects/
   - title: "Blog"
     url: /posts/
   - title: "CV"
